--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="button_save">Créer</string>
     <string name="problemPersonalAsset">Impossible de choisir cet atout personnel : niveau de la compétence supérieur à 3 et le niveau du joueur est inférieur à 3 !</string>
     <string name="cantCreate">Veuillez choisir un pseudo et une origine !</string>
+    <string name="problemSPECIAL">Total des statistiques supérieur à 40 ou statistique inférieure à 4 ou statistique supérieure à 10</string>
 </resources>
